--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/mujichOk/msc-core.git"
+    "url": "https://github.com/mujichOk/msc-core.git"
   },
   "keywords": [
     "microservice",
