--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/mujichOk/msc-core#readme",
   "dependencies": {
+    "async": "2.5.0",
     "config": "1.26.2"
   },
   "devDependencies": {
