--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "msc-core",
   "version": "0.0.1",
   "description": "microservice chasis core",
-  "main": "build/index.js",
+  "main": "source/index.js",
   "scripts": {
-    "build": "rm -rf build && babel source --out-dir build --source-maps",
     "test": "jest --config ./jest.config.json"
   },
   "repository": {
@@ -26,9 +25,6 @@
     "config": "1.26.2"
   },
   "devDependencies": {
-    "babel-jest": "21.0.2",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-es2017": "6.24.1",
     "jest": "21.1.0"
   }
 }
